test-generator/tests/snapshots/ts/test_generated_abstract_class_declaration.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
abstract class TestClass { abstract method(): void; }

AST:
(program
  (abstract_class_declaration
    name: (type_identifier "TestClass")
    body: (class_body
      (abstract_method_signature
        name: (property_identifier "method")
        parameters: (formal_parameters)
        return_type: (type_annotation
          (predefined_type "void")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "method",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 37,
                end_line: 1,
                end_column: 43,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
