test-generator/tests/snapshots/ts/test_generated_intersection_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const value12: { a: number } & { b: string } = { a: 42, b: 'test' };

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "value12")
      type: (type_annotation
        (intersection_type
          (object_type
            (property_signature
              name: (property_identifier "a")
              type: (type_annotation
                (predefined_type "number")
              )
            )
          )
          (object_type
            (property_signature
              name: (property_identifier "b")
              type: (type_annotation
                (predefined_type "string")
              )
            )
          )
        )
      )
      value: (object
        (pair
          key: (property_identifier "a")
          value: (number "42")
        )
        (pair
          key: (property_identifier "b")
          value: (string
            (string_fragment)
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value12",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "a",
            position: Position {
                start_line: 1,
                start_column: 18,
                end_line: 1,
                end_column: 19,
            },
            definition_type: PropertyDefinition,
        },
        Definition {
            name: "b",
            position: Position {
                start_line: 1,
                start_column: 34,
                end_line: 1,
                end_column: 35,
            },
            definition_type: PropertyDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "a",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 18,
                end_line: 1,
                end_column: 19,
            },
        },
        Usage {
            name: "b",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 34,
                end_line: 1,
                end_column: 35,
            },
        },
        Usage {
            name: "a",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 50,
                end_line: 1,
                end_column: 51,
            },
        },
        Usage {
            name: "b",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 57,
                end_line: 1,
                end_column: 58,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
