test-generator/tests/snapshots/ts/test_generated_rest_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type RestTuple = [string, ...number[]];

AST:
(program
  (type_alias_declaration
    name: (type_identifier "RestTuple")
    value: (tuple_type
      (predefined_type "string")
      (rest_type
        (array_type
          (predefined_type "number")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "RestTuple",
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 15,
            },
            definition_type: TypeDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
